# X-Game-Engine

./: .gitignore  CMakeLists.txt  README.md
include/com/afirex/xge/: Platform.h  SDL_Engine.h  engine_exception.h  logger.h
src/com/afirex/xge/: SDL_Engine.cpp  engine_exception.cpp  logger.cpp  main.cpp
